fixed whitespace at top of page, links with underlines, and thick line

--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,19 @@ body {
 	font-family: 'Times New Roman', serif;
 }
 
+a {
+	font-size: 100%;
+	font-family: 'Times New Roman', serif;
+	color: blue;
+	text-decoration: none;
+}
+
 .wrapper {
 	width: 960px;
 	margin: 0 auto;
 	background: #fff;
 	padding: 0 45px 20px;
+	overflow: hidden;
 }
 
 /* Write all remaining styles here */
@@ -22,6 +30,7 @@ h1 {
 	font-family: 'Libre Baskerville', serif;
 	color: #9BAAA5;
 	font-size: 400%;
+	margin-bottom: 15px;
 }
 
 h2 {
@@ -35,10 +44,11 @@ h2 {
 	border-color: #668380;
 }
 
-.line {
-	border-top-style: solid;
-	border-top-color: #EEEEEE;
+header {
+	border-bottom-style: solid;
+	border-bottom-color: #EEEEEE;
 	margin-bottom: 8px;
+	border-width: 2px;
 }
 
 #press img {
@@ -60,6 +70,5 @@ footer {
 	text-align: right;
 	color: #484848;
 	font-size: 90%;
+	overflow: hidden;
 }
-
-/* top is too far away, link needs no underline, and top white */
